24-11-2004 Qball <Qball@qballcow.nl>
	* src/player.c:		pop/push popup msg is now stack based.
	* src/playlist3.c:	position is (in session) saved and restored.
	* src/playlist3.c: 	Push/pop messages are now popped off in the
	right order.

13-11-2004 Qball <Qball@qballcow.nl>
	* src/playlist3.c:	Allow the playlist to be reordered
	* src/playlist3.c:	Binded I to information about song.

10-11-2004 Qball <Qball@qballcow.nl>
	* src/tray-icon.c:	Changed tooltip text markup
05-11-2004 Qball <Qball@qballcow.nl>
	* src/tray-icon.c:	Remove empty space of progressbar when its not
	availible
	* src/playlist3.c:	Check if playlist is active when
	disconnecting. if not, don't do anything.
	* src/tray-icon.c:	Context menu on tray-icon now uses stock
	icons, not default stuff. (no more a glade menu). 
	

2-11-2004 Qball <Qball@qballcow.nl>
	* src/playlist3.c:	Can't open row in plaaylist when disconnected.
	* src/playlist3.c:	activating a row now expands it.

1-11-2004 Qball <Qball@qballcow.nl>
	* src/playlist3.c:	Implemented avuton's request, I don't like
	it.. lets see how it works out.
31-10-2004 Qball <Qball@qballcow.nl>
	* src/playlist3.c:	Add right mouse menu in right pane
28-10-2004 Qball <Qball@qballcow.nl>
	* src/playlist3.c:	Added clear/shuffle/info option

25-10-2004 Qball <Qball@qballcow.nl>
	* src/playlist3.c:	Moved code around, improved function naming.
	* src/playlist3.c:	Added replacing in the right mouse menu for
	real
	* src/playlist3.c:	Added right mouse menu for artist browser.
	* src/playlist3.c:	Added user feedback. (in statusbar)

24-10-2004 Qball <Qball@qballcow.nl>
	* src/playlist3.c:	Moved code around, improved function naming.
	* sr/cplaylist3.c:	Added replace option in right mouse menu.

22-10-2004 Qball <Qball@qballcow.nl.
	* Started initial work on playlist version 3

16-10-2004 Qball <Qball@qballcow.nl>
	* Fixed severall smaller autotools issues.
	* src/eggtrayicon.c:	Fixed gettex compile time error.